--- a/Biblioteca/appsettings.json
+++ b/Biblioteca/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BibliotecaDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "AuthOptions": {
+    "Issuer": "BibliotecaAPI",
+    "Audience": "BibliotecaClients",
+    "Key": "MiClaveSecretaSuperSeguraParaJWT12345",
+    "ExpMinutes": 60
   }
 }
