--- a/BankLink/appsettings.json
+++ b/BankLink/appsettings.json
@@ -12,11 +12,11 @@
   "AuthOptions": {
     "Issuer": "BankLinkAPI",
     "Audience": "BankLinkClients",
-    "Key": "MiClaveSecretaSuperSeguraParaBankLinkJWT12345",
+    "Key": "MiClaveSecretaSuperSeguraParaBankLink12345",
     "ExpMinutes": 60
   },
-  "ApiKeys": {
-    "BankLinkApiKey": "BL-2024-API-KEY-SUPER-SEGURA-123456",
-    "ExternalBankApiUrl": "https://api.bancoexterno.com"
+  "BancoExternoApi": {
+    "BaseUrl": "https://api-banco-externo.com",
+    "Timeout": 30
   }
 }
